# retrofactory

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ci.sh  dir_structure.txt
source/: CMakeLists.txt
source/config/: version.h
source/core/: CMakeLists.txt  core.cpp  core.h  core_api.cpp  core_api.h  entities.cpp  entities.h  game_state.h  networks.cpp  networks.h  recipies.cpp  recipies.h  research.cpp  research.h  trans_net.c  trans_net.h  travel_net.c  travel_net.h
source/engine/: CMakeLists.txt  config.cpp  config.h  eng_app.cpp  eng_app.h  engine.cpp  engine.h  replay.cpp  replay.h  retro_runtime.cpp  retro_runtime.h  simulate.cpp  simulate.h  snapshot.cpp  snapshot.h  state.cpp  state.h
source/interface/: CMakeLists.txt  launch_main.cpp  launch_main.h
source/launcher/common/: launcher_config.cpp  launcher_config.h  launcher_detect.cpp  launcher_detect.h  launcher_model.cpp  launcher_model.h
source/launcher/entry/: launcher_1x.c  launcher_1x.cpp  launcher_3x.c  launcher_3x.cpp  launcher_9x.cpp  launcher_cx.cpp  launcher_lx.cpp  launcher_mx.cpp  launcher_nx.cpp
source/launcher/ui/: gdi_ui.c  gdi_ui.cpp  gdi_ui.h  macosc_ui.cpp  macosc_ui.h  sdl2_ui.cpp  sdl2_ui.h  text_ui.c  text_ui.cpp  text_ui.h
source/mods/: depgraph.cpp  depgraph.h  loader.cpp  loader.h  manifest.cpp  manifest.h  mod_api.cpp  mod_api.h  prototypes.cpp  prototypes.h  registry.cpp  registry.h
source/mods/script/: scr_bind.cpp  scr_bind.h  scr_vm.cpp  scr_vm.h
source/net/: net_client.cpp  net_client.h  net_lockstep.cpp  net_lockstep.h  net_server.cpp  net_server.h
source/platform/: plat_api.h  plat_ids.h
source/platform/dos16/: dos16_audio.c  dos16_fs.c  dos16_input.cpp  dos16_main.c  dos16_main.cpp  dos16_net.c  dos16_time.c  dos16_video.c
source/platform/dos32/: dos32_audio.c  dos32_fs.cpp  dos32_input.c  dos32_main.c  dos32_main.cpp  dos32_net.c  dos32_time.c  dos32_video.c
source/platform/posix/: CMakeLists.txt  posix_audio.cpp  posix_fs.cpp  posix_input.cpp  posix_main.cpp  posix_net.cpp  posix_platform.cpp  posix_time.cpp  posix_video.cpp
source/platform/web/: web_audio.cpp  web_fs.cpp  web_input.cpp  web_main.cpp  web_net.cpp  web_time.cpp  web_video.cpp
source/platform/win16/: win16_audio.c  win16_fs.c  win16_input.cpp  win16_main.c  win16_main.cpp  win16_net.c  win16_time.c  win16_video.c
source/platform/win32/: win32_audio.cpp  win32_fs.cpp  win32_input.cpp  win32_main.cpp  win32_net.cpp  win32_time.cpp  win32_video.cpp
source/present/: present_api.cpp  present_api.h  present_backend.h
source/present/dx5/: pres_dx5.cpp  pres_dx5.h
source/present/gdi/: pres_gdi.c  pres_gdi.cpp  pres_gdi.h
source/present/qdraw/: pres_qdraw.c  pres_qdraw.cpp  pres_qdraw.h
source/present/sdl1/: pres_sdl1.cpp  pres_sdl1.h
source/present/sdl2/: pres_sdl2.cpp  pres_sdl2.h
source/present/software/: sw_cga.cpp  sw_core.c  sw_core.cpp  sw_core.h  sw_ega.c  sw_ega.cpp  sw_vesa.cpp  sw_vga.cpp
source/present/web/: pres_web.cpp  pres_web.h
source/render/: CMakeLists.txt  rend_api.cpp  rend_api.h  rend_backend.h  rend_dx.cpp  rend_dx.h  rend_dx5.cpp  rend_dx5.h  rend_gl.cpp  rend_gl.h  rend_gl1.cpp  rend_gl1.h  rend_gl2.cpp  rend_gl2.h  rend_metal.cpp  rend_metal.h  rend_pick.cpp  rend_pick.h  rend_sdl.cpp  rend_sdl.h  rend_sw.cpp  rend_sw.h  rend_types.h  rend_vk.cpp  rend_vk.h  rnd_api.cpp  rnd_api.h  rnd_pick.cpp  rnd_pick.h  rnd_sw.cpp  rnd_sw.h
source/runtime/: CMakeLists.txt  rt_config.cpp  rt_config.h  rt_config_paths.cpp  rt_config_paths.h  rt_error.cpp  rt_error.h  rt_log.cpp  rt_log.h  rt_paths.cpp  rt_paths.h  rt_profile.cpp  rt_profile.h  rt_save_mgr.cpp  rt_save_mgr.h
source/save/: CMakeLists.txt  save.cpp  save.h  state_hash.cpp  state_hash.h
source/saveload/: hash.cpp  hash.h  migrate.cpp  migrate.h  saveload.cpp  saveload.h
source/schedule/: events.cpp  events.h  tick.cpp  tick.h
source/system/: CMakeLists.txt  ids.h  rng.cpp  rng.h  system_base.h  types.h  units.h
source/ui/: ui_core.cpp  ui_core.h  ui_debug.cpp  ui_debug.h  ui_game.cpp  ui_game.h  ui_skin.cpp  ui_skin.h
source/utility/: CMakeLists.txt  array.h  bitset.h  fixed.h  geom.cpp  geom.h  hash.cpp  hash.h  path.cpp  path.h  span.h  string.cpp  string.h  utility_stub.cpp  vector.h
source/world/: CMakeLists.txt  chunk.cpp  chunk.h  colony.cpp  colony.h  planet.cpp  planet.h  region.cpp  region.h  surface.cpp  surface.h  tile.cpp  tile.h  transit.cpp  transit.h  world.cpp  world.h  world_grid.cpp  world_grid.h  world_space.cpp  world_space.h  worldgen.cpp  worldgen.h
tests/: CMakeLists.txt
tests/core/: test_entity.cpp  test_networks.cpp  test_research.cpp  test_rng.cpp  test_world.cpp
tests/determinism/: test_replay_basic.cpp  test_replay_cross.cpp  test_replay_editions.cpp  test_save_load.cpp
tests/macrosim/: test_transit.cpp
tests/render/: test_presenters.cpp  test_render_sw.cpp
tools/: CMakeLists.txt
tools/asset_packer/: packer.cpp  packer.h
tools/cmake-3.29.6-windows-x86_64/cmake-3.29.6-windows-x86_64/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
tools/cmake-3.29.6-windows-x86_64/cmake-3.29.6-windows-x86_64/doc/cmake/html/_static/: documentation_options.js
tools/cmake-3.29.6-windows-x86_64/cmake-3.29.6-windows-x86_64/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
tools/cmake-3.29.6-windows-x86_64/cmake-3.29.6-windows-x86_64/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-configure-log.7  cmake-cxxmodules.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
tools/mod_sdk/: scaffold.cpp  scaffold.h  validate.cpp  validate.h
tools/save_viewer/: viewer.cpp  viewer.h
tools/sprite_build/: builder.cpp  builder.h
tools/world_inspect/: inspect.cpp  inspect.h
(+2316 files in other folders)
